src/objects/OrderApi__Connection_Type_Mapping__c.object
<CustomObject>
    <description>Connection Types map to other Connection Types using Connection Type Mappings.</description>
    <fields>
        <fullName>OrderApi__Connection_Type__c</fullName>
        <description>**Required** The Connection Type being mapped to another Connection Type.</description>
        <inlineHelpText>**Required** The Connection Type being mapped to another Connection Type.</inlineHelpText>
        <label>Connection Type</label>
        <referenceTo>OrderApi__Connection_Type__c</referenceTo>
        <relationshipLabel>Connection Type Mappings</relationshipLabel>
        <relationshipName>Connection_Type_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OrderApi__Mapped_Connection_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** The Connection Type that is being mapped.</description>
        <inlineHelpText>**Required** The Connection Type that is being mapped.</inlineHelpText>
        <label>Mapped Connection Type</label>
        <referenceTo>OrderApi__Connection_Type__c</referenceTo>
        <relationshipLabel>Connection Type Mappings (Mapped Connection Type)</relationshipLabel>
        <relationshipName>Connection_Type_Mappings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__System_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Field** Do not manually update or override. When checked the mapping is created by a trigger, when unchecked the mapping was created manually. Defaults to unchecked.</description>
        <inlineHelpText>**System Field** Do not manually update or override. When checked the mapping is created by a trigger, when unchecked the mapping was created manually. Defaults to unchecked.</inlineHelpText>
        <label>System Created</label>
        <type>Checkbox</type>
    </fields>
    <label>Connection Type Mapping</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connection Type Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>